<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1aa3ff"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_resultado2"
        android:layout_width="193dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="202dp"
        android:text="@string/total"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FDFDFE"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="669dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="279dp"
        android:layout_height="114dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="555dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/march" />

    <CheckBox
        android:id="@+id/spoiler"
        android:layout_width="193dp"
        android:layout_height="38dp"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="453dp"
        android:onClick="selectItem"
        android:text="@string/Aleron"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/mascara"
        android:layout_width="193dp"
        android:layout_height="43dp"
        android:layout_marginTop="286dp"
        android:layout_marginBottom="402dp"
        android:onClick="selectItem"
        android:text="@string/antifaz"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/controles"
        android:layout_width="193dp"
        android:layout_height="34dp"
        android:layout_marginTop="336dp"
        android:layout_marginBottom="361dp"
        android:onClick="selectItem"
        android:text="@string/controles"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/rin"
        android:layout_width="193dp"
        android:layout_height="39dp"
        android:layout_marginTop="383dp"
        android:layout_marginBottom="309dp"
        android:onClick="selectItem"
        android:text="@string/rin"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="301dp"
        android:onClick="finalSelection"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_resultado2" />

    <TextView
        android:id="@+id/total"
        android:layout_width="194dp"
        android:layout_height="42dp"
        android:layout_marginStart="209dp"
        android:layout_marginTop="486dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="203dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:layout_marginBottom="520dp"
        android:text="Costo Inicial: $200,000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:text="+ $5000"
        app:layout_constraintBottom_toBottomOf="@+id/spoiler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/spoiler"
        app:layout_constraintTop_toTopOf="@+id/spoiler" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:text="+ $4000"
        app:layout_constraintBottom_toBottomOf="@+id/mascara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mascara"
        app:layout_constraintTop_toTopOf="@+id/mascara" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:text="+ $10,000"
        app:layout_constraintBottom_toBottomOf="@+id/controles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/controles"
        app:layout_constraintTop_toTopOf="@+id/controles" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:text="+ $15,000"
        app:layout_constraintBottom_toBottomOf="@+id/rin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rin"
        app:layout_constraintTop_toTopOf="@+id/rin" />

</androidx.constraintlayout.widget.ConstraintLayout>